# python-mutation-report

./: .gitignore  LICENSE  Pipfile  README.md  action.yml  hoge.py  pyproject.toml
.github/: CONTRIBUTING.md  CONTRIBUTING_mv.md
.github/workflows/: check-licenses.yml  create-release-tag.yml  e2e-test.yml  main.yml  test-actions-except-PR.yml  test-actions-on-PR.yml  ubuntu-and-macos-test.yml  ubuntu-and-macos-unit-test.yml  unit-test.yml
development/backup-pipenv-project/: Pipfile
development/backup-pipenv-project/src/: fizz_buzz.py  shop.py
development/pipenv-project-to-replace/tests/: test_calculator.py  test_fizz_buzz.py
docs/: sample_summary_comment.md
pipenv-project/: Pipfile
pipenv-project/doc/: book.txt
pipenv-project/src/: calculator.py  fizz_buzz.py  shop.py
pipenv-project/src/domain/: book.py
pipenv-project/tests/: test_calculator.py  test_drinv_mv_only.py  test_fizz_buzz.py
pipenv-project/tests/domain/: test_model.py
pipenv-project/tests/model/: test_book.py
script/: generate_requirements.py
scripts/: generate_pre_mutation_config.py  generate_requirements.py  generate_requirements_from_pipfile.py  make_command_of_run.py  reshape_result_for_PR_comment.py
scripts/development/: mutmut-mutate.sh  mutmut-output.sh  mutmut-run.sh
tests/data/expected/: PR_comment.txt  added_mutmut_config.py  created_mutmut_config.py  do_nothing_mutmut_config.py
tests/e2e/: compare_PR_comment.py
tests/unit/: test_generate_requirements.py  test_make_command_of_run.py  test_pre-mutation_config.py  test_reshape_result_for_PR_comment.py
(+13 files in other folders)
